--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div id="protectedContent" style="display:none;">
     <p>Acceso concedido ✔</p>
     <!-- Cambia "imagen.png" al nombre exacto de tu archivo si es distinto -->
-    <img src="imagen.png" alt="Imagen protegida">
+    <img src="Imagen.png" alt="Imagen protegida">
   </div>
 
   <script>
