--- a/index.html
+++ b/index.html
@@ -2,25 +2,15 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Ruta MRA</title>
+  <title>Imagen</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 400px;
-      margin: 40px auto;
       text-align: center;
-    }
-    input {
-      padding: 8px;
-      margin-top: 10px;
-      width: 100%;
-      box-sizing: border-box;
-    }
-    button {
-      padding: 8px 12px;
-      margin-top: 10px;
-      cursor: pointer;
+      margin: 0;
+      padding: 0;
+      background: #ffffff;
     }
     img {
       max-width: 100%;
@@ -29,32 +19,10 @@
   </style>
 </head>
 <body>
-  <h2>Acceso a la imagen</h2>
-  <div id="login">
-    <p>Ingresa la contraseña para ver la imagen:</p>
-    <input type="password" id="passwordInput" placeholder="Contraseña">
-    <button onclick="checkPassword()">Entrar</button>
-  </div>
+  <img src="Imagen.png" alt="Imagen">
+</body>
+</html>
 
-  <div id="protectedContent" style="display:none;">
-    <p>Acceso concedido ✔</p>
-    <!-- Cambia "imagen.png" al nombre exacto de tu archivo si es distinto -->
-    <img src="Imagen.png" alt="Imagen protegida">
-  </div>
-
-  <script>
-    // 🔒 Cambia esta contraseña por la que tú quieras
-    const CORRECT_PASSWORD = "1234";
-
-    function checkPassword() {
-      const input = document.getElementById("passwordInput").value;
-      if (input === CORRECT_PASSWORD) {
-        document.getElementById("login").style.display = "none";
-        document.getElementById("protectedContent").style.display = "block";
-      } else {
-        alert("Contraseña incorrecta");
-      }
-    }
   </script>
 </body>
 </html>
